--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -13,6 +17,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.45.0",
     "serve": "^13.0.2",
+    "typescript": "^4.5.5",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -20,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
